depl2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: httpd1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: httpd1
    spec:
      containers:
      - name: front-end
        image: docker.io/adavydov/apache3:latest
        ports:
         - containerPort: 8000
