ingress2.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpd1-ingress
  namespace: default
spec:
  rules:
  - host: test2.rub.remnewsletters.com
    http:
      paths:
      - path: /
        backend:
          servicePort: 8000
          serviceName: httpd1-service
